--- a/src/app/stage-details/stage-details.component.html
+++ b/src/app/stage-details/stage-details.component.html
@@ -10,48 +10,66 @@
             <mat-expansion-panel-header class="form-group-header">
                 Nazwa
             </mat-expansion-panel-header>
-            <input type="text" class="form-control" id="stage-name" name='name'
-            [ngModel]='model.getStage().getName()' (ngModelChange)="model.getStage().setName($event)"
-            (keyup.enter)="updateStage()" (focusout)="updateStage()">
-            <div *ngIf="!model.isNameValid() && model.isNameChanged()"
-            class="invalid-feedback">Nazwa nie może być pusta</div>
+           <ng-container [ngTemplateOutlet]="stage_name"></ng-container>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" [expanded]="model.getStage().getDescription()!=null">
             <mat-expansion-panel-header class="form-group-header">
                 Opis
             </mat-expansion-panel-header>
-            <textarea class="form-control" id="stage-description" name="description" rows="4"
-            [ngModel]='model.getStage().getDescription()' (ngModelChange)="model.getStage().setDescription($event)"
-            (keyup.enter)="updateStage()" (focusout)="updateStage()"></textarea>
+            <ng-container [ngTemplateOutlet]="stage_description"></ng-container>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" [expanded]="true">
             <mat-expansion-panel-header class="form-group-header">
                 Stan
             </mat-expansion-panel-header>
-            <select class="form-control" id="stage-status" name="status"
-            [ngModel]='model.getStage().getStatus()' (ngModelChange)="model.getStage().setStatus($event)"
-            (change)="updateStage()">
-
-                <option [ngValue]="status.STARTED">Aktywny</option>
-                <option [ngValue]="status.ENDED">Zakończony</option>
-                <option [ngValue]="status.CANCELED">Anulowany</option>
-                <option [ngValue]="status.AWAITING">Oczekujący</option>
-            </select>
+            <ng-container [ngTemplateOutlet]="stage_status"></ng-container>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" [expanded]="model.getStage().getEndDate()!=null">
             <mat-expansion-panel-header class="form-group-header">
                 Data końcowa
             </mat-expansion-panel-header>
-            <div class="datepicker-container">
-                <input matInput class='form-control' id="stage-end-date" name="end-date" [matDatepicker]="endDatePicker"
-                [ngModel]='model.getStage().getEndDate()' (ngModelChange)="model.getStage().setEndDate($event)"
-                (dateChange)="updateStage()">
-                <mat-datepicker-toggle [for]="endDatePicker" class="datepicker"></mat-datepicker-toggle>
-                <mat-datepicker #endDatePicker></mat-datepicker>
-            </div>
+            <ng-container [ngTemplateOutlet]="stage_end_date"></ng-container>
         </mat-expansion-panel>
     </form>
 </div>
+
+<ng-template #stage_name>
+    <input type="text" class="form-control" id="stage-name" name='name'
+        [ngModel]='model.getStage().getName()' (ngModelChange)="model.getStage().setName($event)"
+        (keyup.enter)="updateStage()" (focusout)="updateStage()">
+    <div *ngIf="!model.isNameValid() && model.isNameChanged()"
+        class="invalid-feedback">
+        Nazwa nie może być pusta
+    </div>
+</ng-template>
+
+<ng-template #stage_description>
+    <textarea class="form-control" id="stage-description" name="description" rows="4"
+            [ngModel]='model.getStage().getDescription()' (ngModelChange)="model.getStage().setDescription($event)"
+            (keyup.enter)="updateStage()" (focusout)="updateStage()">
+        </textarea>
+</ng-template>
+
+<ng-template #stage_status>
+    <select class="form-control" id="stage-status" name="status"
+    [ngModel]='model.getStage().getStatus()' (ngModelChange)="model.getStage().setStatus($event)"
+    (change)="updateStage()">
+        <option [ngValue]="status.STARTED">Aktywny</option>
+        <option [ngValue]="status.ENDED">Zakończony</option>
+        <option [ngValue]="status.CANCELED">Anulowany</option>
+        <option [ngValue]="status.AWAITING">Oczekujący</option>
+    </select>
+</ng-template>
+
+<ng-template #stage_end_date>
+    <div class="datepicker-container">
+        <input matInput class='form-control' id="stage-end-date" name="end-date" [matDatepicker]="endDatePicker"
+        [ngModel]='model.getStage().getEndDate()' (ngModelChange)="model.getStage().setEndDate($event)"
+        (dateChange)="updateStage()">
+        <mat-datepicker-toggle [for]="endDatePicker" class="datepicker"></mat-datepicker-toggle>
+        <mat-datepicker #endDatePicker></mat-datepicker>
+    </div>
+</ng-template>
