--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -148,6 +148,10 @@
         <button mat-menu-item (click)="getMenu().onRemoveTask()">
           Usuń
         </button>
+
+        <button mat-menu-item (click)="getMenu().addTaskToPomodoro(task)">
+          Dodaj do Pomodoro
+        </button>
       </mat-menu>
       ...
     </div>
