--- a/src/app/pomodoro/pomodoro.component.html
+++ b/src/app/pomodoro/pomodoro.component.html
@@ -1,4 +1,4 @@
-<div class="timer-container">
+<div class="timer-container" *ngIf="!statisticsOpen">
     <button (click)="model.toggleSettingsOpen()">Ustawienia</button>
     <div class="settings" [hidden]="!model.isSettingsOpen()">
         <div class="settings-group">
@@ -76,5 +76,9 @@
             Dodaj 5 minut
         </button>
     </div>
-    
+    <button (click)="openStatistics()">Otwórz statystyki</button> 
 </div>
+
+<app-pomodoro-statistics *ngIf="statisticsOpen"
+    (closeEvent)="closeStatistics()">
+</app-pomodoro-statistics>
