--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -35,6 +35,9 @@
     <button mat-menu-item (click)="getRemoving().onRemoveProject()">
       Usuń
     </button>
+    <button mat-menu-item (click)="openKanban()">
+      Otwórz tablice
+    </button>
 </mat-menu>
 
 <ng-template #filter_container>
