--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -1,16 +1,40 @@
-<div>
+<div class="kanban-view shadow app-panel">
+    <input class="add-column-input" 
+    [ngModel]="getModel().getColumnName()" (ngModelChange)="getModel().setColumnName($event)">
+    <button class="add-column-button" (click)="addColumn()">Dodaj kolumnę</button>
     <div class="columns-container">
-        <div class="column" id="{{columnName}}"
-        *ngFor="let column of getModel().getColumns()"
-        cdkDropList #columnName="cdkDropList" 
-        [cdkDropListData]="column.getKanbanTasks()"
-        [cdkDropListConnectedTo]="getModel().getColumnsNames()"
-        (cdkDropListDropped)="drop($event)">
-            {{columnName}}
-            <div cdkDrag *ngFor="let kanbanTask of column.getKanbanTasks()"
+        <div class="column" 
+        *ngFor="let column of getModel().getColumns()">
+            <div class="column-header">
+                {{column.getName()}}
+            </div>
+            <div class="column-content"  id="{{getModel().getColumnIdText(column)}}"
+            cdkDropList #column.getId().toString()="cdkDropList" 
+            [cdkDropListData]="column.getKanbanTasks()"
+            [cdkDropListConnectedTo]="getModel().getColumnsNames()"
+            (cdkDropListDropped)="drop($event)">
+                <div cdkDrag *ngFor="let kanbanTask of column.getKanbanTasks()"
                 class="task-item">
                 {{kanbanTask.getTask().getName()}}
-            </div>            
+            </div>
+            </div>       
+        </div>
+
+        <div class="column" >
+            <div class="column-header">
+                {{getModel().getDefaultColumn().getName()}}
+            </div>
+            <div class="column-content" id='{{getModel().getColumnIdText(getModel().getDefaultColumn())}}'
+            cdkDropList #getModel().getDefaultColumn().getId().toString()="cdkDropList" 
+            [cdkDropListData]="getModel().getDefaultColumn().getKanbanTasks()"
+            [cdkDropListConnectedTo]="getModel().getColumnsNames()"
+            (cdkDropListDropped)="drop($event)">
+                <div cdkDrag *ngFor="let kanbanTask of getModel().getDefaultColumn().getKanbanTasks()"
+                class="task-item">
+                {{kanbanTask.getTask().getName()}}
+            </div> 
+            </div>
+                       
         </div>
     </div>
     <button (click)="closeView()"> Zamknij</button>
